# Dwarf-Launcher

./: LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/dwarf/launcher/: GameActivity.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
